--- a/src/components/Calendar/CalendarList/CalendarListEntry/styles.module.scss
+++ b/src/components/Calendar/CalendarList/CalendarListEntry/styles.module.scss
@@ -1,4 +1,4 @@
-//@import "../../styles/variables";
+@import "../../../../styles/variables";
 
 .CalendarListEntry {
   display: flex;
@@ -9,6 +9,9 @@
 
 .CalendarListEntry___selected {
   background-color: white;
+  -webkit-box-shadow: 0 1px 3px 0 $grey;
+  -moz-box-shadow: 0 1px 3px 0 $grey;
+  box-shadow: 0 1px 3px -1px $grey;
 }
 
 .CalendarListEntry_dot {
